fixed issue of navbar being behind video, only on chromium?

--- a/Basic/styles.css
+++ b/Basic/styles.css
@@ -84,6 +84,7 @@ nav {
 	position: sticky;
 	top: 0;
 	background-color: transparent;
+	z-index: 1000;
 }
 
 
